overflow fix

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ nav a{
 }
 html{
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 body {
     scroll-behavior: smooth;
